--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         color: white;
         padding: 10px;
         height: 150px;
-        background-color: yellow;
+        background-color: pink;
         border-radius: 5px;
     }
 </style>
